Fixed footer overlaping on low res

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,11 +37,16 @@ section {
   min-height: calc(100% - 1px);
 }
 footer {
-  clear: both;
-  position: relative;
-  z-index: 10;
-  height: 3em;
-  margin-top: -3em;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #201f1f;
+  color: #f2f2f2;
+  margin-top: 40px;
+  z-index: -1;
 }
 footer a {
   color: #ededed;
